[package]
name = "tonic-middleware-macros"
version = "0.1.0"
authors = ["Hugues Morisset <morisset.hugues@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true
name = "tonic_middleware_macros"

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

